--- a/templates/google-auth/base.html
+++ b/templates/google-auth/base.html
@@ -20,7 +20,7 @@
  <body>
    {% block main %}{% endblock %}
    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+   <script src="/static/js/jquery.min.js"></script>
    <!-- Include all compiled plugins (below), or include individual files as needed -->
    <script src="/static/js/bootstrap.min.js"></script>
  </body>
