--- a/portalapp/templates/portalapp/base.html
+++ b/portalapp/templates/portalapp/base.html
@@ -19,7 +19,7 @@
    <![endif]-->
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
    <script src="{% static 'js/typeahead.bundle.js' %}" ></script>
-   <script src="/static/js/handlebars.js" ></script>
+   <script src="/static/js/handlebars-v3.0.0.js" ></script>
  </head>
  <body>
    {% block main %}{% endblock %}
