--- a/templates/google-auth/home.html
+++ b/templates/google-auth/home.html
@@ -16,6 +16,9 @@
      <li>
        <a href="{% url 'portalapp:create_userinfo' %}">Click here to create your profile</a>
      </li>
+     <li>
+      <a href="{% url 'portalapp:view_userinfo'  %}">Click here to View Profile</a>
+    </li>
    {% else %}
      <li>
        <a href="{% url 'social:begin' 'google-oauth2' %}?next={{ request.path }}">Login with Google</a>
