--- a/portalapp/templates/portalapp/base.html
+++ b/portalapp/templates/portalapp/base.html
@@ -8,9 +8,9 @@
    <title>{% block title %}Third-party Authentication Tutorial{% endblock %}</title>
 
    <!-- Bootstrap -->
-   <link href="/static/css/bootstrap.min.css" rel="stylesheet">
-   <link href="/static/css/bootstrap-theme.min.css" rel="stylesheet">
-   <link href="/static/css/examples.css" rel="stylesheet">
+   <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+   <link href="{% static 'css/bootstrap-theme.min.css' %}" rel="stylesheet">
+   <link href="{% static 'css/examples.css' %}" rel="stylesheet">
    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
    <!--[if lt IE 9]>
@@ -19,7 +19,7 @@
    <![endif]-->
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
    <script src="{% static 'js/typeahead.bundle.js' %}" ></script>
-   <script src="/static/js/handlebars-v3.0.0.js" ></script>
+   <script src="{% static 'js/handlebars-v3.0.0.js' %}" ></script>
  </head>
  <body>
    {% block main %}{% endblock %}
