modified one static include to django standard format

--- a/portalapp/templates/portalapp/base.html
+++ b/portalapp/templates/portalapp/base.html
@@ -26,6 +26,6 @@
    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 
    <!-- Include all compiled plugins (below), or include individual files as needed -->
-   <script src="/static/js/bootstrap.min.js"></script>
+   <script src="{% static 'js/bootstrap.min.js' %}"></script>
  </body>
 </html>
