--- a/portalapp/templates/portalapp/index.html
+++ b/portalapp/templates/portalapp/index.html
@@ -20,5 +20,6 @@ List ends here<br>
 <a href="{% url 'portalapp:create_userinfo' %}">Create Profile</a>
 <br/>
 <a href="{% url 'portalapp:view_userinfo'  %}">View Profile</a>
-
+<br/>
+<a href="{% url 'portalapp:search' %}">Search for alumni</a>
 
