In user profile showing email of the userinfo object rather than the logged in person

--- a/portalapp/templates/portalapp/userinfo.html
+++ b/portalapp/templates/portalapp/userinfo.html
@@ -13,7 +13,7 @@
     <table class="table">
 	<tr>
 	<td>Email</td>
-	<td>{{user.email}}</td>
+	<td>{{userinfo.user.email}}</td>
     </tr>
     <tr>
     	<td>Department</td>
